finalizando mi dia con monitoreos

--- a/monitoreo/templates/index.html
+++ b/monitoreo/templates/index.html
@@ -38,8 +38,10 @@
             });
                 
     });
-
 </script>
+<style type="text/css">
+    #user2{display: none;}
+</style>
 {% endblock %}
 
 {% block filtros %} {% endblock %}
