--- a/monitoreo/templates/simas/suelo.html
+++ b/monitoreo/templates/simas/suelo.html
@@ -4,11 +4,6 @@
 {%block titulo%}Suelo{%endblock%}
 {% block contenido %}
 
-<div id="contenedor_igual">
-  <a href="/suelos" class="educacion">Carácteristicas del terreno</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-  <a href="/manejosuelo" class="educacion">Manejo del suelo</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-</div>
+{% include "nav_suelo.html" %}
 <div class="separador"></div>
 {% endblock %}
