--- a/monitoreo/templates/simas/tierra.html
+++ b/monitoreo/templates/simas/tierra.html
@@ -4,12 +4,7 @@
 {%block titulo%}Tierra{%endblock%}
 {% block contenido %}
 
-<div id="contenedor_igual">
-  <a href="/fincas" class="educacion">Uso de tierra</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-                           
-  <a href="/arboles" class="educacion">Existencia de árboles y Reforestación</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-</div>
+{% include "nav_tierra.html" %}
+
 <div class="separador"></div>
 {% endblock %}
