--- a/monitoreo/templates/base.html
+++ b/monitoreo/templates/base.html
@@ -2,11 +2,26 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>{%block title%}SISTEMA DE INFORMACIÓN MONITOREO ZONA ALTA Y SECA{%endblock%}</title>
+        <title>{%block title%}Sistema de Informaci&oacute;n Monitoreo Zona Alta y Seca{%endblock%}</title>
         <link href="{{MEDIA_URL}}css/style.css" rel="stylesheet" type="text/css" media="all" title=""/>
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-        <script src="{{MEDIA_URL}}js/jquery.quicksearch.js" type="text/javascript"></script>
-        <script src="{{MEDIA_URL}}js/jquery.tablesorter.min.js" type="text/javascript" ></script>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>        
+        <script type="text/javascript">
+            var flag = true;
+            $(document).ready(function(){
+                $('#mas').click(function(){
+                    if(flag==true){
+                        $('#mostrar').slideDown();
+                        $('#estado').text('[«]');
+                        flag = false;
+                    }else{
+                        $('#mostrar').slideUp();
+                        $('#estado').text('[»]');
+                        flag = true;
+                    }
+                    return false;
+                });
+            });
+        </script>
 	{%block extra_header%}{%endblock%}
     </head>
     <body>
@@ -39,29 +54,29 @@
             <div class="wrapper">
                 {% block filtros %}
                 <div id="filtros">
-                                <span class="variables">Variables</span>
-                                
-                                {%if num_familias%}<span class="variables_filtro"><b>Familias</b><br>{{num_familias}}</span>{%endif%}
-                                {%if request.session.fecha%}<span class="variables_filtro"><b>Año</b><br>{{request.session.fecha}}</span>{%endif%}
-                                {%if request.session.departamento%}<span class="variables_filtro"><b>Departamento</b><br>{{request.session.departamento}}</span>{%endif%}
-                                {%if request.session.municipio.nombre%}<span class="variables_filtro"><b>Municipio</b><br>{{request.session.municipio.nombre}}</span>{%endif%}
-                                {%if request.session.comunidad.nombre%}<span class="variables_filtro"><b>Comunidad</b><br>{{request.session.comunidad.nombre}}</span>{%endif%}
-                                {%if request.session.socio%}<span class="variables_filtro"><b>Socio</b><br>{%if request.session.socio = '1'%}Si{%else%}No{%endif%}</span>{%endif%}
-                                {%if request.session.desde%}<span class="variables_filtro"><b>Años de socio</b><br>{%if request.session.desde = '1'%}Menos de 5 {%else%}Mas de 5 {%endif%}</span>{%endif%}
-                                {%if request.session.duenio%}<span class="variables_filtro"><b>Tipo Dueño</b><br>{%if request.session.duenio = '1'%}Hombre{%endif%}{%if request.session.duenio = '2'%}Mujer{%endif%}{%if request.session.duenio = '3'%}Mancomunado{%endif%}{%if request.session.duenio = '4'%}Parientes{%endif%}{%if request.session.duenio = '5'%}Colectivo{%endif%}{%if request.session.duenio = '6'%}No hay{%endif%}</span>{%endif%}
-                            </div>
-                
+                    <a href="/index/" class="cambiar_consulta">Variables</a>
+                    <img src="/archivos/imagen/separador.png" alt="separador" class="separador_vert">
+                    <div class="filtros_seleccionados_text">Filtros <br>seleccionados</div>                    
+                    {%if num_familias%}<span class="variables_filtro"><b>Familias</b>{{num_familias}}</span>{%endif%}
+                    {%if request.session.fecha%}<span class="variables_filtro"><b>Año</b>{{request.session.fecha}}</span>{%endif%}
+                    {%if request.session.departamento%}<span class="variables_filtro"><b>Departamento</b>{{request.session.departamento}}</span>{%endif%}
+                    {%if request.session.municipio.nombre%}<span class="variables_filtro"><b>Municipio</b>{{request.session.municipio.nombre}}</span>{%endif%}
+                    {%if request.session.comunidad.nombre%}<span class="variables_filtro"><b>Comunidad</b>{{request.session.comunidad.nombre}}</span>{%endif%}
+                    {%if request.session.socio%}<span class="variables_filtro"><b>Socio</b>{%if request.session.socio = '1'%}Si{%else%}No{%endif%}</span>{%endif%}
+                    {%if request.session.desde%}<span class="variables_filtro"><b>Años de socio</b>{%if request.session.desde = '1'%}Menos de 5 {%else%}Mas de 5 {%endif%}</span>{%endif%}
+                    {%if request.session.duenio%}<span class="variables_filtro"><b>Tipo Dueño</b>{%if request.session.duenio = '1'%}Hombre{%endif%}{%if request.session.duenio = '2'%}Mujer{%endif%}{%if request.session.duenio = '3'%}Mancomunado{%endif%}{%if request.session.duenio = '4'%}Parientes{%endif%}{%if request.session.duenio = '5'%}Colectivo{%endif%}{%if request.session.duenio = '6'%}No hay{%endif%}</span>{%endif%}
+                </div>
                 {% endblock %}
                 {% block index %}{% endblock %}
             </div>
         </div>
         <div id="user2">
             <div class="wrapper1">
-                  <div id="titulo">
-                    {% block titulo %} {% endblock %}
-                   </div>
+                <div id="titulo">
+                    {% block titulo %}{% endblock %}
+                </div>
                 {% block contenido %}
-                
+
                 {% endblock %}
             </div>
         </div>
