--- a/monitoreo/templates/simas/arboles.html
+++ b/monitoreo/templates/simas/arboles.html
@@ -4,15 +4,11 @@
 {% block extra_header %}
 <script type="text/javascript">
 
-$(document).ready(function(){
-
-    $('#mas').click(function(){
-    $('#mostrar').slideDown();
-
-    })
-});
-
-
+    $(document).ready(function(){
+        $('#mas').click(function(){
+            $('#mostrar').slideDown();
+        })
+    });
     var activo = 0;
     function click_callback(id){
         $.getJSON('/grafo/arboles/' + id, function(data) {
@@ -68,17 +64,11 @@ $(document).ready(function(){
 </script>
 {% endblock %}
 {% block contenido %}
-
- <div id="contenedor_igual">
-  <a href="/fincas" class="educacion">Uso de tierra</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-  <a href="/arboles" class="educacion">Existencia de árboles y Reforestación</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-  </div>
+{% include "nav_tierra.html" %}
 <div class="separador"></div>
 
 <div id="mostrar">
-     {% include "simas/menu.html" %}
+    {% include "simas/menu.html" %}
 </div>
 
 <img id="mas" src="/archivos/imagen/more.png" alt="Indicadores">
