--- a/monitoreo/templates/simas/educacion.html
+++ b/monitoreo/templates/simas/educacion.html
@@ -1,42 +1,26 @@
 {% extends "base.html" %}
 {% load unslugify %}
-{%block titulo%}Subindicador Educación{%endblock%}
 {%block extra_header%}
 
-<script type="text/javascript">
-$(document).ready(function(){
-
-    $('#mas').click(function(){
-    $('#mostrar').slideDown();
-
-    })
-});
-
-</script>
 {%endblock%}
+
+{%block titulo%}
+Subindicador Educación
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+{%endblock%}
+
 {% block contenido %}
 
-<div id="contenedor_igual">
-  <a href="/educacion" class="educacion">Educación</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-  <a href="/salud" class="educacion">Salud</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-  <a href="/luz"class="agua">Energia</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-  <a href="/agua"class="luz">Agua de consumo</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-</div>
+{% include "nav_familia.html" %}
+
 <div class="separador"></div>
-<br></br>
+<br>
 
 <div id="mostrar">
-     {% include "simas/menu.html" %}
+    {% include "simas/menu.html" %}
 </div>
-
-<img id="mas" src="/archivos/imagen/more.png" alt="Indicadores">
-
 <div class="contenido">
-    <table id="table_example" class="tablesorter" style="font-size:90%">
+    <table>
         <caption>Educación</caption>
         <thead>
             <tr>
@@ -62,16 +46,5 @@ $(document).ready(function(){
         </tbody>
     </table>
 </div>
-<script>
-    // Hacemos que nos aplique cebra a las filas de la tabla y permita ordenarla
-    // ademas que ordene por defecto las filas 0,0 y 2,1
-    $(document).ready(function()
-    {
-        //$("#table_example").tablesorter();
-        //$("#table_example").tablesorter({sortList:[[0,0],[2,1]], widgets: ['zebra']});
-        $("#table_example").tablesorter({sortList:[[1,0],[1,1]], widgets: ['zebra']});
-    }
-); 
-</script>
 {% endblock %}
 
