--- a/monitoreo/templates/simas/fincas.html
+++ b/monitoreo/templates/simas/fincas.html
@@ -3,14 +3,11 @@
 {%block titulo%}Subindicador Tierra{%endblock%}
 {% block extra_header %}
 <script type="text/javascript">
-
-$(document).ready(function(){
-
-    $('#mas').click(function(){
-    $('#mostrar').slideDown();
-
-    })
-});
+    $(document).ready(function(){
+        $('#mas').click(function(){
+            $('#mostrar').slideDown();
+        })
+    });
 
 
     //si activo es 0 el html interno esta vacio
@@ -29,40 +26,33 @@ $(document).ready(function(){
         });
     }
     $(document).ready(function() {
-    $("#grafico1").click(function(){
-        $("#grafico1").addClass('enlace_seleccionado');
-        $("#grafico2").removeClass('enlace_seleccionado');
-        $("#grafico3").removeClass('enlace_seleccionado');
-    });
+        $("#grafico1").click(function(){
+            $("#grafico1").addClass('enlace_seleccionado');
+            $("#grafico2").removeClass('enlace_seleccionado');
+            $("#grafico3").removeClass('enlace_seleccionado');
+        });
     
-    $("#grafico2").click(function(){
-        $("#grafico2").addClass('enlace_seleccionado'); 
-        $("#grafico1").removeClass('enlace_seleccionado');
-        $("#grafico3").removeClass('enlace_seleccionado');
-    });
+        $("#grafico2").click(function(){
+            $("#grafico2").addClass('enlace_seleccionado');
+            $("#grafico1").removeClass('enlace_seleccionado');
+            $("#grafico3").removeClass('enlace_seleccionado');
+        });
 
-    $("#grafico3").click(function(){
-        $("#grafico3").addClass('enlace_seleccionado'); 
-        $("#grafico1").removeClass('enlace_seleccionado');
-        $("#grafico2").removeClass('enlace_seleccionado');
+        $("#grafico3").click(function(){
+            $("#grafico3").addClass('enlace_seleccionado');
+            $("#grafico1").removeClass('enlace_seleccionado');
+            $("#grafico2").removeClass('enlace_seleccionado');
+        });
     });
-});
 </script>
 {%endblock%}
 
 {% block contenido %}
-
-
- <div id="contenedor_igual">
-  <a href="/fincas" class="educacion">Uso de tierra</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-  <a href="/arboles" class="educacion">Existencia de árboles y Reforestación</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
- </div>
- <div class="separador"></div>
+{% include "nav_tierra.html" %}
+<div class="separador"></div>
 
 <div id="mostrar">
-     {% include "simas/menu.html" %}
+    {% include "simas/menu.html" %}
 </div>
 
 <img id="mas" src="/archivos/imagen/more.png" alt="Indicadores">
