--- a/monitoreo/templates/simas/organizacion.html
+++ b/monitoreo/templates/simas/organizacion.html
@@ -4,11 +4,7 @@
 {%block titulo%}Organización{%endblock%}
 {% block contenido %}
 
-<div id="contenedor_igual">
-  <a href="/gremial" class="educacion">Gremial</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-  <a href="/comunitario" class="educacion">Comunitaria</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="description" title="description" width="1px" height="20px" />
-</div>
+{% include "nav_org.html" %}
+
 <div class="separador"></div>
 {% endblock %}
