--- a/monitoreo/templates/simas/cultivos.html
+++ b/monitoreo/templates/simas/cultivos.html
@@ -1,6 +1,9 @@
 {% extends "base.html"%}
 {%load unslugify %}
-{% block titulo %}Subindicador los Cultivos y la producción{% endblock %}
+{% block titulo %}
+Subindicador los Cultivos y la producción
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+{% endblock %}
 {
 {%block contenido%}
 <div id="mostrar">
