--- a/monitoreo/templates/simas/agua.html
+++ b/monitoreo/templates/simas/agua.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {%load unslugify %}
-{% block titulo %}Subindicador Agua{%endblock%}
+{% block titulo %}
+Subindicador Agua
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+{%endblock%}
 {%block extra_header%}
 <script type="text/javascript">
     $(document).ready(function(){
