--- a/monitoreo/templates/simas/arboles.html
+++ b/monitoreo/templates/simas/arboles.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {%load unslugify %}
-{%block titulo%}Existencia de árboles y Reforestación{%endblock%}
+{%block titulo%}
+Existencia de árboles y Reforestación
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+{%endblock%}
 {% block extra_header %}
 <script type="text/javascript">
     $(document).ready(function(){
