--- a/monitoreo/templates/simas/equipos.html
+++ b/monitoreo/templates/simas/equipos.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {%load unslugify %}
-{%block titulo%}Subindicador Bienes{%endblock%}
+{%block titulo%}
+Subindicador Bienes
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+{%endblock%}
 {% block extra_header %}
 <script type="text/javascript">
     var activo = 0;
