--- a/monitoreo/templates/simas/familia.html
+++ b/monitoreo/templates/simas/familia.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 
 {% block title %}Monitoreo - Familias{% endblock %}
-{%block titulo%}Familias{%endblock%}
+{%block titulo%}
+Familias
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+{%endblock%}
 {% block contenido %}
 
 {% include "nav_familia.html" %}
