--- a/monitoreo/templates/simas/manejo_suelo.html
+++ b/monitoreo/templates/simas/manejo_suelo.html
@@ -1,6 +1,9 @@
 {% extends "base.html"%}
 {%load unslugify %}
-{% block titulo %}Subindicador Manejo del Suelo{% endblock%}
+{% block titulo %}
+Subindicador Manejo del Suelo
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+{% endblock%}
 {% block extra_header %}
 <script type="text/javascript">
     $(document).ready(function(){
