--- a/monitoreo/templates/simas/organizacion.html
+++ b/monitoreo/templates/simas/organizacion.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 
 {% block title %}Monitoreo - Organización{% endblock %}
-{%block titulo%}Organización{%endblock%}
+{%block titulo%}
+Organización
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+{%endblock%}
 {% block contenido %}
 
 {% include "nav_org.html" %}
