--- a/monitoreo/templates/simas/riesgos.html
+++ b/monitoreo/templates/simas/riesgos.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 
 {% block title %}Monitoreo - Riesgos{% endblock %}
-{%block titulo%}Riesgos{%endblock%}
+{%block titulo%}
+Riesgos
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+{%endblock%}
 {% block contenido %}
 
 {% include "nav_riesgos.html" %}
