--- a/monitoreo/templates/simas/salud.html
+++ b/monitoreo/templates/simas/salud.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {%load unslugify %}
-{% block titulo %}Subindicador Salud{%endblock%}
+{% block titulo %}
+Subindicador Salud
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+{%endblock%}
 {% block contenido %}
 
 {% include "nav_familia.html" %}
