--- a/monitoreo/templates/simas/seguridad.html
+++ b/monitoreo/templates/simas/seguridad.html
@@ -1,6 +1,9 @@
 {% extends "base.html"%}
 {%load unslugify %}
-{% block titulo %}Subindicador Seguridad alimentaria{% endblock%}
+{% block titulo %}
+Subindicador Seguridad alimentaria
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+{% endblock%}
 {% block contenido %}
 
 <div id="mostrar">
