--- a/monitoreo/templates/simas/semilla.html
+++ b/monitoreo/templates/simas/semilla.html
@@ -1,6 +1,9 @@
 {% extends "base.html"%}
 {%load unslugify %}
-{% block titulo %}Subindicador Uso de Semilla{% endblock%}
+{% block titulo %}
+Subindicador Uso de Semilla
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+{% endblock%}
 {% block contenido %}
 <div id="mostrar">
      {% include "simas/menu.html" %}
