--- a/monitoreo/templates/simas/tenencia.html
+++ b/monitoreo/templates/simas/tenencia.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 
 {% block title %}Monitoreo - Tenencia{% endblock %}
-{%block titulo%}Tenencia{%endblock%}
+{%block titulo%}
+Tenencia
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+{%endblock%}
 {% block contenido %}
 
                         <div id="contenedor_igual">
