--- a/monitoreo/templates/simas/tierra.html
+++ b/monitoreo/templates/simas/tierra.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 
 {% block title %}Monitoreo - Tierra{% endblock %}
-{%block titulo%}Tierra{%endblock%}
+{%block titulo%}
+Tierra
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno">[&raquo;]</span></div>
+{%endblock%}
 {% block contenido %}
 
 {% include "nav_tierra.html" %}
